--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "@angular2-material/button": "^2.0.0-alpha.8-1",
+    "@angular2-material/card": "^2.0.0-alpha.8-1",
+    "@angular2-material/core": "^2.0.0-alpha.8-1",
+    "@angular2-material/icon": "^2.0.0-alpha.8-1",
+    "@angular2-material/input": "^2.0.0-alpha.8-2",
+    "@angular2-material/list": "^2.0.0-alpha.8-2",
+    "@angular2-material/menu": "^2.0.0-alpha.8-1",
+    "@angular2-material/sidenav": "^2.0.0-alpha.8-1",
+    "@angular2-material/toolbar": "^2.0.0-alpha.8-1",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -27,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
+    "@types/hammerjs": "^2.0.32",
     "angular-cli": "1.0.0-beta.14",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
