--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "@angular2-material/menu": "^2.0.0-alpha.8-1",
     "@angular2-material/sidenav": "^2.0.0-alpha.8-1",
     "@angular2-material/toolbar": "^2.0.0-alpha.8-1",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23",
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
+    "core-js": "^2.4.1",
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
-    "tether": "^1.3.7"
+    "rxjs": "5.0.0-beta.12",
+    "tether": "^1.3.7",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
