--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular2-material/button": "^2.0.0-alpha.8-1",
-    "@angular2-material/card": "^2.0.0-alpha.8-1",
-    "@angular2-material/core": "^2.0.0-alpha.8-1",
-    "@angular2-material/icon": "^2.0.0-alpha.8-1",
-    "@angular2-material/input": "^2.0.0-alpha.8-2",
-    "@angular2-material/list": "^2.0.0-alpha.8-2",
-    "@angular2-material/menu": "^2.0.0-alpha.8-1",
-    "@angular2-material/sidenav": "^2.0.0-alpha.8-1",
-    "@angular2-material/toolbar": "^2.0.0-alpha.8-1",
+    "@angular/common": "^2.0.1",
+    "@angular/compiler": "^2.0.1",
+    "@angular/core": "^2.0.1",
+    "@angular/forms": "^2.0.1",
+    "@angular/http": "^2.0.1",
+    "@angular/platform-browser": "^2.0.1",
+    "@angular/platform-browser-dynamic": "^2.0.1",
+    "@angular/router": "^3.0.1",
+    "@angular2-material/button": "2.0.0-alpha.8-2",
+    "@angular2-material/card": "2.0.0-alpha.8-2",
+    "@angular2-material/core": "2.0.0-alpha.8-2",
+    "@angular2-material/icon": "2.0.0-alpha.8-2",
+    "@angular2-material/input": "2.0.0-alpha.8-2",
+    "@angular2-material/list": "2.0.0-alpha.8-2",
+    "@angular2-material/menu": "2.0.0-alpha.8-2",
+    "@angular2-material/sidenav": "2.0.0-alpha.8-2",
+    "@angular2-material/toolbar": "2.0.0-alpha.8-2",
+    "@types/hammerjs": "^2.0.33",
+    "@types/jasmine": "^2.2.34",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
@@ -38,7 +40,7 @@
     "rxjs": "5.0.0-beta.12",
     "tether": "^1.3.7",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
