--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular2-material/menu": "2.0.0-alpha.8-2",
     "@angular2-material/sidenav": "2.0.0-alpha.8-2",
     "@angular2-material/toolbar": "2.0.0-alpha.8-2",
+    "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
