--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "material-design-lite": "^1.2.1",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
     "rxjs": "5.0.0-beta.12",
@@ -45,8 +46,8 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
     "@types/hammerjs": "^2.0.32",
+    "@types/jasmine": "^2.2.30",
     "angular-cli": "1.0.0-beta.14",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
@@ -56,10 +57,11 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "nodemon": "^1.10.2",
     "protractor": "4.0.5",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "2.0.2",
-    "nodemon": "^1.10.2"
+    "webpack": "^2.1.0-beta.22"
   }
 }
