--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@ngrx/store": "^2.2.1",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
+    "@types/lodash": "^4.14.37",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "lodash": "^4.16.4",
     "material-design-lite": "^1.2.1",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
