--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular2-material/sidenav": "2.0.0-alpha.8-2",
     "@angular2-material/toolbar": "2.0.0-alpha.8-2",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.34",
@@ -50,7 +51,7 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.32",
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.14",
+    "angular-cli": "1.0.0-beta.17",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
