--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
+    "dragula": "^3.7.2",
     "express": "^4.14.0",
     "lodash": "^4.16.4",
     "material-design-lite": "^1.2.1",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
+    "ng2-dragula": "^1.2.1",
     "rxjs": "5.0.0-beta.12",
     "tether": "^1.3.7",
     "ts-helpers": "^1.1.1",
