--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jasmine": "^2.2.34",
     "@types/lodash": "^4.14.37",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
