--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
     "express": "^4.14.0",
@@ -47,6 +48,7 @@
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
     "ng2-dragula": "^1.2.1",
+    "request": "^2.75.0",
     "rxjs": "5.0.0-beta.12",
     "tether": "^1.3.7",
     "ts-helpers": "^1.1.1",
